# operation-bonanza

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Operation-Bonanza-Overview.md  README.md  pyproject.toml  requirements.txt
data/df/messages/: lisa-craig-distribution.ndjson  lisa-danny-customs.ndjson  lisa-danny-distribution.ndjson  lisa-snowwhite-supply.ndjson  lisa-terry-workshop.ndjson  op-bonanza-evidential-threads.json
data/intel-reports/: OP_BONANZA--dummy-reports.ndjson  op-bonanza-intel-reports.ndjson
elasticsearch/indices/: demo-intel-messages.json  demo-intel.reports-dummy.json  demo-investigation-df.messages.json  demo-investigation-intel.reports.json
elasticsearch/pipelines/: intel-reports-pipeline.json  investigation-intel.reports-pipeline.json  investigation-messages-pipeline.json  reddit-chat-data-pipeline.json
notebooks/: ingest_data_elasticsearch.ipynb  ingest_intel-data_elasticsearch.ipynb  ingest_message-data_elasticsearch.ipynb
